# opcua-pnp

./: .run_tmp.sh  CMakeLists.txt  README.md  component.cfg  install_prereq.sh  run_camera.sh  run_camera_imgviewer.sh  run_imageprocessor.sh  run_mes.sh  run_skillcomposer.sh  run_template.in.sh
certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/camera/: CMakeLists.txt  component.cfg  img_viewer_component.cfg  run_template_img_viewer.in.sh
components/camera/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/camera/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/camera/lib/: Camera.h  CameraClient.h  CameraDevice.h  CvDevice.h  PhotoSkillImpl.h
components/camera/model/: CameraModel.csv  CameraModel.xml
components/camera/model/Published/CameraModel/: Camera.Classes.cs  Camera.Constants.cs  Camera.NodeSet.xml  Camera.NodeSet2.xml  Camera.PredefinedNodes.uanodes  Camera.PredefinedNodes.xml  CameraModel.csv  CameraModel.xml
components/camera/src/: Camera.cpp  CameraClient.cpp  CameraDevice.cpp  CvDevice.cpp  PhotoSkillImpl.cpp  client_img_viewer.cpp  main.cpp
components/image-processor/: CMakeLists.txt  component.cfg  run_template.in.sh
components/image-processor/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/image-processor/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/image-processor/lib/: ImageProcessor.h  MarkerDetectionSkillImpl.h
components/image-processor/model/: ImageProcessorModel.xml
components/image-processor/model/Published/ImageProcessorModel/: ImageProcessor.Classes.cs  ImageProcessor.Constants.cs  ImageProcessor.DataTypes.cs  ImageProcessor.NodeSet.xml  ImageProcessor.NodeSet2.xml  ImageProcessor.PredefinedNodes.uanodes  ImageProcessor.PredefinedNodes.xml  ImageProcessor.Types.bsd  ImageProcessor.Types.xsd  ImageProcessorModel.csv  ImageProcessorModel.xml
components/image-processor/src/: ImageProcessor.cpp  MarkerDetectionSkillImpl.cpp  main.cpp
components/image-processor/test/: CMakeLists.txt  aruco_test.cpp  markers.csv
components/skill-composer/: CMakeLists.txt  component.cfg  run_template.in.sh
components/skill-composer/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/skill-composer/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
components/skill-composer/lib/: ComponentClient.h  MarkerFindingSkillImpl.h  SkillComposer.h
components/skill-composer/model/: SkillComposerModel.xml
components/skill-composer/model/Published/SkillComposerModel/: SkillComposer.Classes.cs  SkillComposer.Constants.cs  SkillComposer.DataTypes.cs  SkillComposer.NodeSet.xml  SkillComposer.NodeSet2.xml  SkillComposer.PredefinedNodes.uanodes  SkillComposer.PredefinedNodes.xml  SkillComposer.Types.bsd  SkillComposer.Types.xsd  SkillComposerModel.csv  SkillComposerModel.xml
components/skill-composer/src/: ComponentClient.cpp  ComponentClient.cpp.backup  MarkerFindingSkillImpl.cpp  SkillComposer.cpp  main.cpp
components/skill-composer/test/: CMakeLists.txt  event_client  event_client.cpp
include/opcua/: CMakeLists.txt
include/opcua/client/: RegisteredSkill.cpp  SkillClient.cpp  SkillDetector.cpp
include/opcua/include/: helper.hpp
include/opcua/include/client/: RegisteredSkill.h  SkillClient.h  SkillHelper.hpp
include/opcua/include/skills/camera/: ImageFrameSkill.hpp  ImageSkill.hpp  ImageStreamSkill.hpp  PhotoSkill.hpp
include/opcua/include/skills/composed/: RTMarkerDetectionSkill.hpp
include/opcua/include/skills/image_processing/: MarkerDetectionSkill.hpp
include/opcua/include/skills/image_processor/: MarkerDetectionSkill.hpp
include/opcua/include/skills/skill_composer/: MarkerFindingSkill.hpp
mes/: CMakeLists.txt  component.cfg  run_template.in.sh
mes/certs/client/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
mes/certs/server/: lucas-laptop.crt  lucas-laptop.key  lucas-laptop_cert.der  lucas-laptop_key.der
mes/lib/: MES.h
mes/src/: MES.cpp  main.cpp
nodeset/DeviceModel/: DeviceModel.csv
nodeset/DeviceModel/Published/DeviceModel/: DeviceModel.xml  fortiss_Device.Classes.cs  fortiss_Device.Constants.cs  fortiss_Device.DataTypes.cs  fortiss_Device.NodeSet.xml  fortiss_Device.NodeSet2.xml  fortiss_Device.PredefinedNodes.uanodes  fortiss_Device.PredefinedNodes.xml  fortiss_Device.Types.bsd  fortiss_Device.Types.xsd
nodeset/PnPTypes/: PnPTypes.csv  PnPTypes.xml
nodeset/PnPTypes/Published/PnPTypes/: PnPTypes.Classes.cs  PnPTypes.Constants.cs  PnPTypes.DataTypes.cs  PnPTypes.NodeSet.xml  PnPTypes.NodeSet2.xml  PnPTypes.PredefinedNodes.uanodes  PnPTypes.PredefinedNodes.xml  PnPTypes.Types.bsd  PnPTypes.Types.xsd  PnPTypes.csv  PnPTypes.xml
src/: MES.cpp
